--- a/html/servicios.html
+++ b/html/servicios.html
@@ -251,12 +251,10 @@
         </div>
     </section>
 
-        <section class="cta-section">
-            <div class="my-container cta-content">
-                <h2>Universo es lo que estás buscando, estamos acá para acompañarte.</h2>
-                <a href="./contacto.html" class="cta-button">Contactános</a>
-            </div>
-        </section>
+    <div class="boton">
+        <h3>Todo empieza con una decisión.</h3>
+        <a href="./html/contacto.html" class="button se-parte">Empecemos a crear</a>
+    </div>
   </main>
 
   <footer class="footer">
