--- a/html/contacto.html
+++ b/html/contacto.html
@@ -36,7 +36,7 @@
     </header>
     <main>
         <section class="hero-section">
-            <img src="../imagenes/contacto.jpeg" class="hero_img" alt="reunion">
+            <img src="../imagenes/contacto.jpg" class="hero_img" alt="reunion">
             <div class="hero_overlay"></div>
                 <div class="hero_content">
                     <h1 class="hero_title">Lo que estás esperando, empieza ahora.</h1>
