--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -35,7 +35,7 @@
 
     <main>
         <section class="hero-nosotros">
-            <img src="../imagenes/nosotros.jpeg"  class="hero_img" alt="corpo meeting">
+            <img src="../imagenes/nosotros.jpg"  class="hero_img" alt="corpo meeting">
             <div class="hero-nosotros__content">
                 <h1>Nuestra Esencia</h1>
                 <p class="header-p">Más que una agencia, un equipo de creadores apasionados.</p>
@@ -97,7 +97,7 @@
             <div class="my-container cta-content">
                 <h2>¿Listo para encontrar tu diferencial?</h2>
                 <p>Hablemos sobre cómo podemos llevar tu marca al siguiente nivel.</p>
-                <a href="./contacto.html" class="cta-button">Vamos a Crear Juntos</a>
+                <a href="./contacto.html" class="cta-button">Creemos Juntos</a>
             </div>
         </section>
     </main>
