--- a/html/servicios.html
+++ b/html/servicios.html
@@ -48,7 +48,7 @@
 
   <main class="servicios-main">
     <section class="hero-servicios">
-      <img src="../imagenes/servicios-img.jpeg" class="hero_img">
+      <img src="../imagenes/servicios.jpg" class="hero_img">
       <div class="hero-servicio__content">
         <h1>Nuestros Servicios</h1>
         <p>Descubre cómo podemos ayudarte a potenciar tu marca y alcanzar tus objetivos.</p>
@@ -253,7 +253,7 @@
 
     <div class="boton">
         <h3>Todo empieza con una decisión.</h3>
-        <a href="./html/contacto.html" class="button se-parte">Empecemos a crear</a>
+        <a href="contacto.html" class="button se-parte">Empecemos a crear</a>
     </div>
   </main>
 
