--- a/html/servicios.html
+++ b/html/servicios.html
@@ -1,4 +1,3 @@
-<!-- servicios.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,24 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Universo - Servicios</title>
 
-  <!-- Swiper CSS -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-  />
-
-  <!-- CSS corregido -->
+  <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="../css/style-servicios.css" />
 </head>
 <body>
   <header class="header">
     <nav class="navbar my-container">
       <a href="../index.html" class="nav-logo">
-        <img
-          src="../imagenes/universo-logo.png"
-          alt="logoUniverso"
-          class="nav_img"
-        />
+        <img src="../imagenes/universo-logo.png" alt="logoUniverso"  class="nav_img"/>
       </a>
       <div class="menu-toggle">☰</div>
       <ul class="nav-menu">
