--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                 <button id="next" class="carousel-boton">›</button>
             </div>
         </div>
+        <div class="boton">
+            <h3>Ideas con propósito, marcas con sentido</h3>
+            <a href="./html/nosotros.html" class="button se-parte">Conocé Universo</a>
+        </div>
 
     </section>
     <section class="contacto">
