--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </form>
             </div>
             <div class="contacto-visual">
-                <img src="./imagenes/team.jpeg" alt="ilustracion de Contacto">
+                <img src="./imagenes/contacto_index.jpg" alt="ilustracion de Contacto">
             </div>
         </div>
         <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1100;">
