--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -38,7 +38,7 @@
             <img src="../imagenes/nosotros.jpg"  class="hero_img" alt="corpo meeting">
             <div class="hero-nosotros__content">
                 <h1>Nuestra Esencia</h1>
-                <p class="header-p">Más que una agencia, un equipo de creadores apasionados.</p>
+                <p class="header-p">Nos mueve la pasión por crear con sentido, la intención de hacer bien las cosas y la fuerza del trabajo en equipo.</p>
             </div>
         </section>
 
