--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="boton">
-            <h3>Ideas con propósito, marcas con sentido</h3>
+            <h3>Diseñamos con alma, planificamos con visión, construimos con vos</h3>
             <a href="./html/nosotros.html" class="button se-parte">Conocé Universo</a>
         </div>
 
