act link y colores

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -138,9 +138,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/company/universo-agencia" target="_blank">
+                            <a href="https://www.linkedin.com/company/universoagencia" target="_blank">
                             <img src="../imagenes/footer/linkedin.png" alt="LinkedIn">
-                            LinkedIn
+                            LinkedIn - Universo Agencia
                             </a>
                         </li>
                     </ul>
