--- a/html/servicios.html
+++ b/html/servicios.html
@@ -170,13 +170,13 @@
             @universoagencia
           </a>
           <a
-            href="https://www.linkedin.com/in/tu_usuario"
+            href="https://www.linkedin.com/company/universoagencia"
             target="_blank"
             rel="noopener"
             class="footer__social-link"
           >
             <img src="../imagenes/footer/linkedin.png" alt="LinkedIn" class="social-icon" />
-            LinkedIn
+            LinkedIn - Universo Agencia
           </a>
         </nav>
       </div>
