--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                     </a>
 
                     <!--LinkedIn-->
-                    <a href="https://www.linkedin.com/in/tu_usuario" target="_blank" rel="noopener" aria-label="LinkedIn" class="footer__social-link">
-                        <img src="./imagenes/footer/linkedin.png" alt="LinkedIn" class="social-icon"/>LinkedIn
+                    <a href="https://www.linkedin.com/company/universoagencia" target="_blank" rel="noopener" aria-label="LinkedIn" class="footer__social-link">
+                        <img src="./imagenes/footer/linkedin.png" alt="LinkedIn" class="social-icon"/>LinkedIn - Universo Agencia
                     </a>
                 </nav>
             </div>
