correccion link final!!

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -132,7 +132,7 @@
                     <span class="linea-decorativa"></span>
                     <ul>
                         <li>
-                            <a href="https://instagram.com/universo.agencia" target="_blank">
+                            <a href="https://www.instagram.com/universoagencia/" target="_blank">
                             <img src="../imagenes/footer/instagram.png" alt="Instagram">
                             @universoagencia
                             </a>
@@ -179,7 +179,7 @@
             <div class="footer__section">
                 <h4 class="footer__title">Contáctanos</h4>
                 <nav class="footer__socials">
-                    <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Instagram" class="footer__social-link">
+                    <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Email" class="footer__social-link">
                         <img src="../imagenes/footer/correo.png" alt="Correo Electrónico Universo" class="social-icon">
                         universoagenciaok@gmail.com
                     </a>
