--- a/html/servicios.html
+++ b/html/servicios.html
@@ -153,73 +153,54 @@
         </div>
   </main>
 
+    <footer class="footer">
+        <div class="container footer__container">
+            <!--redes sociales-->
+            <div class="footer__section">
+                <h4 class="footer__title">Redes Sociales</h4>
+                <nav class="footer__socials">
+                    <!--ig-->
+                    <a href="https://www.instagram.com/universoagencia/" target="_blank" rel="noopener" aria-label="Instagram" class="footer__social-link">
+                        <img src="../imagenes/footer/instagram.png" alt="Instagram" class="social-icon"/>@universoagencia
+                    </a>
 
-  <footer class="footer">
-    <div class="footer__container my-container">
-      <!-- Redes Sociales -->
-      <div class="footer__section">
-        <h4 class="footer__title">Redes Sociales</h4>
-        <nav class="footer__socials">
-          <a
-            href="https://www.instagram.com/universoagencia/"
-            target="_blank"
-            rel="noopener"
-            class="footer__social-link"
-          >
-            <img src="../imagenes/footer/instagram.png" alt="Instagram" class="social-icon" />
-            @universoagencia
-          </a>
-          <a
-            href="https://www.linkedin.com/company/universoagencia"
-            target="_blank"
-            rel="noopener"
-            class="footer__social-link"
-          >
-            <img src="../imagenes/footer/linkedin.png" alt="LinkedIn" class="social-icon" />
-            LinkedIn - Universo Agencia
-          </a>
-        </nav>
-      </div>
+                    <!--LinkedIn-->
+                    <a href="https://www.linkedin.com/company/universoagencia" target="_blank" rel="noopener" aria-label="LinkedIn" class="footer__social-link">
+                        <img src="../imagenes/footer/linkedin.png" alt="LinkedIn" class="social-icon"/>LinkedIn - Universo Agencia
+                    </a>
+                </nav>
+            </div>
 
-      <!-- Contacto -->
-      <div class="footer__section">
-        <h4 class="footer__title">Contáctanos</h4>
-        <nav class="footer__socials">
-          <a
-            href="mailto:universoagenciaok@gmail.com"
-            class="footer__social-link"
-          >
-            <img src="../imagenes/footer/correo.png" alt="Correo Electrónico Universo" class="social-icon" />
-            universoagenciaok@gmail.com
-          </a>
-          <a
-            href="https://wa.me/"
-            target="_blank"
-            rel="noopener"
-            class="footer__social-link"
-          >
-            <img src="../imagenes/footer/whatsapp.png" alt="WhatsApp" class="social-icon" />
-            WhatsApp
-          </a>
-        </nav>
-      </div>
+            <!-- contacto -->
+            <div class="footer__section">
+                <h4 class="footer__title">Contáctanos</h4>
+                <nav class="footer__socials">
+                    <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Email" class="footer__social-link">
+                        <img src="../imagenes/footer/correo.png" alt="Correo Electrónico Universo" class="social-icon">
+                        universoagenciaok@gmail.com
+                    </a>
+                    <a href="https://wa.me/" target="_blank" rel="noopener" aria-label="WhatsApp"class="footer__social-link">
+                        <img src="../imagenes/footer/whatsapp.png" alt="WhatsApp" class="social-icon" />WhatsApp
+                    </a>  
+                </nav>
+            </div>
 
-      <!-- Horario de Atención -->
-      <div class="footer__section">
-        <h4 class="footer__title">Horario de Atención</h4>
-        <p class="footer__hours">
-          <img src="../imagenes/footer/reloj-de-pared.png" alt="Horario" class="social-icon" />
-          Lunes a Viernes<br />
-          9:00 – 18:00
-        </p>
-      </div>
-    </div>
+            <!-- horario de atención -->
+            <div class="footer__section">
+                <h4 class="footer__title">Horario de Atención</h4>
+                    <p class="footer__hours">
+                        <img src="../imagenes/footer/reloj-de-pared.png" alt="Horario" class="social-icon"/>
+                        Lunes a Viernes<br/>
+                        9:00 – 18:00
+                    </p>
+                </div>
+        </div>
 
-    <!-- Derechos Reservados -->
-    <div class="footer__bottom">
-      <p>© 2025 Universo Agencia. Todos los derechos reservados.</p>
-    </div>
-  </footer>
+        <!-- Línea de derechos reservados -->
+        <div class="footer__bottom">
+            <p>© 2025 Universo Agencia. Todos los derechos reservados.</p>
+        </div>
+    </footer>
   <script src="../javaScript/script-servicios.js"></script>
 </body>
 </html>
