--- a/html/gestion-clientes.html
+++ b/html/gestion-clientes.html
@@ -62,7 +62,7 @@
             <div class="footer__section">
                 <h4 class="footer__title">Contáctanos</h4>
                 <nav class="footer__socials">
-                    <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Instagram" class="footer__social-link">
+                    <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Email" class="footer__social-link">
                         <img src="../imagenes/footer/correo.png" alt="Correo Electrónico Universo" class="social-icon">
                         universoagenciaok@gmail.com
                     </a>
