--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
     <main>
         <section class="hero-section">
-            <video class="hero_video" src="./imagenes/creative.mp4"  autoplay muted loop></video>
+            <video class="hero_video" src="./imagenes/creative.mp4"  autoplay muted loop playsinline></video>
             <div class="hero_overlay"></div>
             <div class="hero_content container">
                 <img src="./imagenes/universo-logo.png" alt="Logo Universo Agencia">
@@ -225,7 +225,7 @@
             <div class="footer__section">
                 <h4 class="footer__title">Contáctanos</h4>
                 <nav class="footer__socials">
-                    <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Instagram" class="footer__social-link">
+                    <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Email" class="footer__social-link">
                         <img src="./imagenes/footer/correo.png" alt="Correo Electrónico Universo" class="social-icon">
                         universoagenciaok@gmail.com
                     </a>
